Refactor benefit mapping in employee services
- replaced inline benefit entity construction with BenefitMapper.toEntity in EmployeeMapper
- updated EmployeeService to ensure BenefitType is fully populated using BenefitService.
- added toEntity method in BenefitMapper for converting BenefitDto to Benefit.